--- a/src/pages/MainPage.module.scss
+++ b/src/pages/MainPage.module.scss
@@ -1,14 +1,14 @@
 .container {
-  @apply w-full h-full py-10
+  @apply max-w-[1920px] w-full h-full py-10
   grow flex flex-col xl:flex-row 
   justify-around items-center gap-10;
 
-  &__canvas, &__results{
+  &__canvas,
+  &__results {
     @apply rounded-xl
     bg-siteTheme-light bg-opacity-50
     shadow-xl;
   }
-
 
   &__results {
     @apply w-[500px] h-[600px];
