--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -1,10 +1,10 @@
 .header {
   @apply w-full h-12 py-7
   flex justify-center items-center
-  bg-siteTheme-main;
+  bg-siteTheme-main shadow-2xl;
 
   h1 {
     @apply w-fit h-fit
-    uppercase font-bold text-4xl text-siteTheme-ascent
+    uppercase font-bold text-4xl text-siteTheme-ascent;
   }
 }
